# media-moment-iz-third

./: .gitignore  README.md  deploy_weights_on_roboflow.py  justfile  pyproject.toml  yolo_crop.py  yolo_validate.py
inference/: QwenStacking.py  YoloStacking.py  autotest_util.py  inference_paligemma.py  inference_qwen.py  pipeline.py  preprocessing.py  start_autotest.py
inference/qwen_model/: BaseQwenModel.py  Qwen2VLModel.py  Qwen7VLModel.py  QwenApiModel.py
inference/results/test_20241215_005102_YOLOv11_with_Qwen2-VL-7B-Instruct/: results.json
inference/results/test_20241215_014736_YOLOv11_with_PaliGemma2-3b-pt-224/: results.json
inference/results/test_20241215_015211_YOLOv11_with_PaliGemma2-3b-pt-224_float32/: results.json
inference/results/test_20241215_020206_YOLOv11_with_PaliGemma2-3b-pt-224_float32_only-numeric/: results.json
inference/results/test_20241215_022646_YOLOv11_with_Qwen2-VL-2B-Instruct/: results.json
inference/results/test_20241215_102225_YOLOv11_with_Qwen2-VL-7B-Instruct/: logs.txt  results.json
inference/results/test_20241215_174506_YOLOv11_with_Qwen2-VL-2B-Instruct/: logs.txt  results.json
inference/results/test_20241215_183401_YOLOv11_with_Qwen2-VL-2B-Instruct/: results.json
inference/results/test_20241215_183401_YOLOv11_with_Qwen2-VL-7B-Instruct/: logs.txt
test_bbox_cut/: atpt_1_yolov8_nano.ipynb  atpt_2_yolov11_large.ipynb  atpt_3_yolov8_medium_obb.ipynb  atpt_4_yolov11_medium_obb_aspect_ratio.ipynb  atpt_5_yolov11_medium_aspect_ratio.ipynb
training/: train-yolo-atpt-3.ipynb  train-yolo-atpt-4.ipynb  train-yolo-atpt-5.ipynb
(+5 files in other folders)
