[tool.poetry]
name = "media-moment-iz-third"
version = "0.1.0"
description = ""
authors = ["korsNaike <kirillgrinev2003@mail.ru>", "AlexeyVorobyev <>", "shimern <>", "ARTEZON <>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
roboflow = "^1.1.50"
ultralytics = "^8.3.49"
gradio-client = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
